--- a/src/main/resources/com/bartt/przegladarka/hello-view.fxml
+++ b/src/main/resources/com/bartt/przegladarka/hello-view.fxml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.bartt.przegladarka.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.web.WebView?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartt.przegladarka.HelloController">
+   <children>
+      <Button fx:id="btn1" layoutX="53.0" layoutY="21.0" mnemonicParsing="false" onAction="#onClick1" prefHeight="50.0" prefWidth="88.0" text="ONET" />
+      <Button fx:id="btn2" layoutX="181.0" layoutY="21.0" mnemonicParsing="false" onAction="#onClick2" prefHeight="50.0" prefWidth="88.0" text="WP" />
+      <Button fx:id="btn3" layoutX="320.0" layoutY="21.0" mnemonicParsing="false" onAction="#onClick3" prefHeight="50.0" prefWidth="88.0" text="INTERIA" />
+      <Button fx:id="btn4" layoutX="455.0" layoutY="21.0" mnemonicParsing="false" onAction="#onClick5" prefHeight="50.0" prefWidth="88.0" text="GAZETA.PL" />
+      <WebView fx:id="wb1" layoutX="-13.0" layoutY="99.0" prefHeight="301.0" prefWidth="589.0" />
+   </children>
+</Pane>
